--- a/DickinsonBros.Encryption.AES/DickinsonBros.Encryption.AES.csproj
+++ b/DickinsonBros.Encryption.AES/DickinsonBros.Encryption.AES.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Configurations>Debug;Release</Configurations>
-    <Version>2.0.0</Version>
+    <Version>3.0.0</Version>
     <Authors>Mark Dickinson</Authors>
     <Company>DickinsonBros</Company>
     <RepositoryUrl>https://github.com/msdickinson/DickinsonBros.Encryption.AES.git</RepositoryUrl>
@@ -17,9 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DickinsonBros.Encryption.Abstractions" Version="1.0.0" />
-    <PackageReference Include="DickinsonBros.Encryption.AES.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.4" />
+    <PackageReference Include="DickinsonBros.Encryption.AES.Abstractions" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.5" />
   </ItemGroup>
 
 </Project>
