--- a/DickinsonBros.Encryption.AES.Tests/DickinsonBros.Encryption.AES.Tests.csproj
+++ b/DickinsonBros.Encryption.AES.Tests/DickinsonBros.Encryption.AES.Tests.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DickinsonBros.Test" Version="1.0.8" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-    <PackageReference Include="coverlet.collector" Version="1.3.0">
+    <PackageReference Include="DickinsonBros.Test" Version="[1.1.0, 2.0.0)" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="[3.1.0, 4.0.0)" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="[16.7.0, 17.0.0)" />
+    <PackageReference Include="MSTest.TestAdapter" Version="[2.1.0, 3.0.0)" />
+    <PackageReference Include="MSTest.TestFramework" Version="[2.1.0, 3.0.0)" />
+    <PackageReference Include="coverlet.collector" Version="[1.3.0, 2.0.0)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
