--- a/DickinsonBros.Encryption.AES/DickinsonBros.Encryption.AES.csproj
+++ b/DickinsonBros.Encryption.AES/DickinsonBros.Encryption.AES.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Configurations>Debug;Release</Configurations>
-    <Version>3.0.0</Version>
+    <VersionPrefix>4.0.0</VersionPrefix>
     <Authors>Mark Dickinson</Authors>
     <Company>DickinsonBros</Company>
     <RepositoryUrl>https://github.com/msdickinson/DickinsonBros.Encryption.AES.git</RepositoryUrl>
@@ -17,8 +17,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DickinsonBros.Encryption.AES.Abstractions" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.5" />
+    <PackageReference Include="DickinsonBros.Encryption.AES.Abstractions" Version="[3.0.0,4.0.0)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="[3.1.0,4.0.0)" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="[3.1.0,4.0.0)" />
   </ItemGroup>
 
 </Project>
